# ChangeLog for app-arch/unzip
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/unzip/ChangeLog,v 1.70 2010/08/02 20:31:44 jer Exp $

  02 Aug 2010; Jeroen Roovers <jer@gentoo.org> unzip-6.0-r1.ebuild:
  Stable for PPC too.

  23 Mar 2010; Mike Frysinger <vapier@gentoo.org> unzip-6.0-r1.ebuild:
  Tweak by David James for how we set the toolchain to get better coverage
  #305679.

  10 Jan 2010; Jeroen Roovers <jer@gentoo.org> unzip-6.0-r1.ebuild:
  Stable for HPPA too.

  16 Oct 2009; Jeroen Roovers <jer@gentoo.org> unzip-6.0-r1.ebuild:
  Marked ~hppa (bug #287368).

  08 Oct 2009; Raúl Porcel <armin76@gentoo.org> unzip-6.0-r1.ebuild:
  Add ~alpha/~ia64/~s390/~sh/~sparc wrt #287368

  03 Oct 2009; Brent Baude <ranger@gentoo.org> unzip-6.0-r1.ebuild:
  Marking unzip-6.0-r1 ppc64 for bug 287368

  03 Oct 2009; Markus Meier <maekke@gentoo.org> unzip-6.0-r1.ebuild:
  add ~arm, bug #287368

  03 Oct 2009; Markus Meier <maekke@gentoo.org> unzip-6.0-r1.ebuild:
  amd64/x86 stable, bug #287368

  03 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> unzip-6.0-r1.ebuild:
  Marked ~ppc, bug 287368

*unzip-6.0-r1 (16 Aug 2009)

  16 Aug 2009; Mike Frysinger <vapier@gentoo.org> +unzip-6.0-r1.ebuild:
  Add internal LFS flag to CPPFLAGS #281473 by Rafał Mużyło.

*unzip-6.0 (14 Aug 2009)

  14 Aug 2009; Mike Frysinger <vapier@gentoo.org> +unzip-6.0.ebuild,
  +files/unzip-6.0-no-exec-stack.patch:
  Version bump by Vladimir #280434.

  29 May 2009; Mike Frysinger <vapier@gentoo.org> -unzip-5.52-r1.ebuild:
  Punt old package vuln to GLSA 200804-06 #271725 by Robert Buchholz.

  23 Oct 2008; Diego Pettenò <flameeyes@gentoo.org> unzip-5.52-r2.ebuild:
  Also AS needs to e replaced.

  29 Mar 2008; Jeroen Roovers <jer@gentoo.org> unzip-5.52-r2.ebuild:
  Stable for HPPA (bug #213761).

  29 Mar 2008; Raúl Porcel <armin76@gentoo.org> unzip-5.52-r2.ebuild:
  alpha/ia64/sparc stable wrt security #213761
