@@ -5,6 +5,6 @@ AUX unzip-6.0-no-exec-stack.patch 381 RMD160 c45c06fd6a4fc88ce051637b6d7f1f4b0e0
 DIST unzip552.tar.gz 1140291 RMD160 b749b0923bc4cceaa6f937aef688e9713a84328c SHA1 1831bd59b9e607a69052f83b263384895e2d4a19 SHA256 145d95e2ef1ef9add2e3c97d1340907e33ab8749eb1235372e7f0b7af600a8e9
 DIST unzip60.tar.gz 1376845 RMD160 48af66606e9472e45fbb94bc4e285da23d1b89ba SHA1 abf7de8a4018a983590ed6f5cbd990d4740f8a22 SHA256 036d96991646d0449ed0aa952e4fbe21b476ce994abc276e49d30e686708bd37
 EBUILD unzip-5.52-r2.ebuild 2047 RMD160 08e240161a9590e502189f2b4b5da9dc0ac47e2b SHA1 031add54443d32e9bd8b6f7c402af2e1af2c1d5e SHA256 85c427b934395ebbb00496024aac6c55740d09b5d9ba6fa4c2a5db10b2132fd7
-EBUILD unzip-6.0-r1.ebuild 2850 RMD160 72cd71a026d009df60e99d9a25772969028a9381 SHA1 67db0fc414df35284cc7a9b4bf00e6c4d48ddac5 SHA256 ee9e69ed7d7900b6db5ebda1d0b309f333862253fa4701a41310df5c46111b99
-MISC ChangeLog 8023 RMD160 3908d83f58d2ade71bc6dcad6d6766e85ed5aa2e SHA1 bb6443a47e1ad448222e46c656c07b230da12363 SHA256 12374115bb9ac3691607573d211adce973765c523cc0dcbb7c722c54543d24b8
+EBUILD unzip-6.0-r1.ebuild 2866 RMD160 79f579f3b2918b79c8c92c5b5bb2db3d5702e6e5 SHA1 01a577015d066c18ca49a3fdf32b713280455428 SHA256 81166713ca2a93d1df57e73440fc8e3027558dd1b3ac4ba9ab1d667037e13173
+MISC ChangeLog 8115 RMD160 b8d7296f619fbbcad58a42627bf45720f8bbf69d SHA1 18985fd21785a056704ff1cee76f6ff8749661fe SHA256 1ba98754eddd0bf341117761dcee46abc6753c27f399a416be380459eb650839
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
